--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,10 @@
       "path": "/api/check",
       "schedule": "55 */3 * * *"
     }
-  ]
+  ],
+  "deploymentProtection": {
+    "production": {
+      "standard": "all"
+    }
+  }
 }
